--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@ sips/gym_sip/h/__pycache__/
 */*/__pycache__/
 */*/*/__pycache__/
 
+*/.ipynb_checkpoints/
+*/*/.ipynb_checkpoints/
+*/*/*/.ipynb_checkpoints/
+
+
 sips/gym_sip/data
 
 
