--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ sips/gym_sip/h/__pycache__/
 */__pycache__/
 */*/__pycache__/
 */*/*/__pycache__/
+*/*/*/*/__pycache__/
 
 */.ipynb_checkpoints/
 */*/.ipynb_checkpoints/
